# CacheSeek

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.zh.md  pyproject.toml  quickstart.yaml
benchmarks/: README.md
benchmarks/fluxon/: skv_fluxon_bw_probe.py  skv_fluxon_disc.py  skv_fluxon_transport.py  skv_io_probe.py  skv_io_probe.sh
benchmarks/kvcache_quantization/: README.md  lingbot_exact_reuse.py
cacheseek/: __init__.py
cacheseek/adapters/: __init__.py
cacheseek/adapters/telefuser/: __init__.py  adapter.py  cache_factory.py
cacheseek/backends/: __init__.py
cacheseek/backends/audit/: __init__.py  jsonl.py
cacheseek/backends/encoder/: __init__.py  qwen3vl.py
cacheseek/backends/metadata/: __init__.py  local.py
cacheseek/backends/vector/: __init__.py  faiss.py  qdrant.py
cacheseek/engines/: __init__.py
cacheseek/quant/: __init__.py  factory.py  kernel.py  kivi.py  types.py
cacheseek/reuse/: __init__.py
cacheseek/reuse/approximate/: __init__.py  payload.py  strategy.py
cacheseek/reuse/approximate/models_src/: __init__.py
cacheseek/reuse/approximate/models_src/models/: qwen3_vl_embedding.py  qwen3_vl_reranker.py
cacheseek/reuse/exact_prefix/: __init__.py  config.py  keys.py  lingbot_fast.py  manager.py  strategy.py  telefuser_lingbot.py  trie.py  types.py
cacheseek/service/: __init__.py  cache_types.py  config.py  connection.py  eviction.py  lifecycle.py  log_monitor.py  outputs.py  payload.py  ppl_loader.py  query.py  result.py
cacheseek/service/interfaces/: __init__.py  audit_log.py  encoder.py  framework_adapter.py  kv_store.py  metadata_store.py  reranker.py  strategy.py  vector_store.py
cacheseek/stores/: __init__.py  base.py  fluxon.py  local_file.py  memory.py  tier.py
docs/assets/: cacheseek-architecture-flow.html  cacheseek-architecture-layered.html  cacheseek-architecture-min.html  cacheseek-architecture-overview.html  cacheseek-concept.html  kv_manager-architecture.html
docs/design/: kv-quant.md
examples/: README.md
examples/approximate_reuse/: README.md  e2e_ppl_config.py  e2e_real_components.py  e2e_service_smoke.py  quickstart_lifecycle.py
examples/approximate_reuse/service/: start_wan22_service.py  start_wan22_service.sh
examples/exact_prefix_reuse/: README.md  e2e_telefuser_lingbot.py  quickstart_trie.py
scripts/: preflight_rerank.example.jsonl  preflight_rerank.py  run_experiment.py
scripts/fluxon/: README.md  external_config.yaml  kill_etcd_greptime.sh  start_etcd_greptime.sh  start_master_owner.py
tests/: _strategy_fixtures.py  test_e2e_hit_pair.py  test_e2e_local_roundtrip.py  test_examples_smoke.py  test_interfaces.py  test_lifecycle_async.py  test_regressions.py  test_reuse_strategy_protocol.py  test_smoke.py  test_start_wan22_service_script.py  test_strategy_lookup.py  test_strategy_save.py  test_world_kv_flow.py  test_world_kv_persistence.py  test_world_kv_telefuser_binding.py
